[package]
name    = "choco-version"
version = "0.1.0"
authors = ["AdmiringWorm <kim.nordmo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex       = "1.5.4"

[dev-dependencies]
rstest    = "0.24.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
